Construão dos pacotes DAO e MODEL.

--- a/gibizera/web/index.html
+++ b/gibizera/web/index.html
@@ -6,7 +6,13 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <!--FAVICON-->
+        <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-32x32.png">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+        <meta name="theme-color" content="#ffffff">
+        <!----------->
+        <title>Gibizera</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
