--- a/gibizera/web/index.html
+++ b/gibizera/web/index.html
@@ -232,10 +232,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <h2>About The Event</h2>
-                        <p>Sed nam ut dolor qui repellendus iusto odit. Possimus inventore eveniet accusamus error amet eius aut
-                            accusantium et. Non odit consequatur repudiandae sequi ea odio molestiae. Enim possimus sunt inventore in
-                            est ut optio sequi unde.</p>
+                        <h2>Sobre Gibizeraaa!</h2>
+                        <p>Gibizera é um site fodido de TOPPEr pra você meu caro que não sai de casa pra comprar um gibizão,
+                        que fica o tempo todo na frente de um PC, agora você pode socializar com as outras pessoas iguais a você
+                        sem precisar ver Posts de feministas gordas no Facebook ou alguém implicar contigo, e quem sabe arrumar uma
+                        WEBNAMORADA.</p>
                     </div>
                     <div class="col-lg-3">
                         <h3>Where</h3>
@@ -363,8 +364,8 @@
             <div class="container-fluid">
 
                 <div class="section-header">
-                    <h2>Event Venue</h2>
-                    <p>Event venue location info and gallery</p>
+                    <h2>Comic Con Experience 19</h2>
+                    <p>Porque, afinal, o épico não se escreve. O épico se vive.</p>
                 </div>
 
                 <div class="row no-gutters">
@@ -375,8 +376,10 @@
                     <div class="col-lg-6 venue-info">
                         <div class="row justify-content-center">
                             <div class="col-11 col-lg-8">
-                                <h3>Downtown Conference Center, New York</h3>
-                                <p>Iste nobis eum sapiente sunt enim dolores labore accusantium autem. Cumque beatae ipsam. Est quae sit qui voluptatem corporis velit. Qui maxime accusamus possimus. Consequatur sequi et ea suscipit enim nesciunt quia velit.</p>
+                                <h3>Então vamos falar do nosso mundo: a CCXP.</h3>
+                                <p>No nosso mundo, os grandes estúdios e as grandes franquias trazem em primeira mão trailers especiais, cenas exclusivas e os principais astros do momento. Estamos falando de Disney, Warner, Netflix, FOX, Sony e muitos outros.</p>
+
+                                <p>No nosso mundo você não apenas vive a saga, você fica frente a frente com os criadores delas. No Artists’ Alley, mais de 1700 ilustradores, roteiristas, coloristas e artistas gráficos já comercializaram seus trabalhos, distribuíram autógrafos e interagiram com os fãs.</p>
                             </div>
                         </div>
                     </div>
@@ -463,8 +466,8 @@
 
             <div class="container">
                 <div class="section-header">
-                    <h2>Gallery</h2>
-                    <p>Check our gallery from the recent events</p>
+                    <h2>Wallpapers</h2>
+                    <p>Pega um ai pra buta no seu goku</p>
                 </div>
             </div>
 
@@ -553,8 +556,8 @@
         <section id="subscribe">
             <div class="container wow fadeInUp">
                 <div class="section-header">
-                    <h2>Newsletter</h2>
-                    <p>Rerum numquam illum recusandae quia mollitia consequatur.</p>
+                    <h2>Notícias</h2>
+                    <p>Receba notícias sobre o nosso mundo.</p>
                 </div>
 
                 <form method="POST" action="#">
@@ -563,7 +566,7 @@
                             <input type="text" class="form-control" placeholder="Enter your Email">
                         </div>
                         <div class="col-auto">
-                            <button type="submit">Subscribe</button>
+                            <button type="submit">Enviar</button>
                         </div>
                     </div>
                 </form>
@@ -579,8 +582,8 @@
             <div class="container">
 
                 <div class="section-header">
-                    <h2>Contact Us</h2>
-                    <p>Nihil officia ut sint molestiae tenetur.</p>
+                    <h2>Chama a gente!</h2>
+                    <p>Manda mensagem ai, no tempo vago a gente responde.</p>
                 </div>
 
                 <div class="row contact-info">
@@ -588,16 +591,16 @@
                     <div class="col-md-4">
                         <div class="contact-address">
                             <i class="ion-ios-location-outline"></i>
-                            <h3>Address</h3>
-                            <address>A108 Adam Street, NY 535022, USA</address>
+                            <h3>VemK</h3>
+                            <address>Rua São Paulo, Fernandópolis - SP, BRAZIL</address>
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="contact-phone">
                             <i class="ion-ios-telephone-outline"></i>
-                            <h3>Phone Number</h3>
-                            <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
+                            <h3>Manda um ZAP!</h3>
+                            <p><a href="tel:+5517996455355">17 996455355</a></p>
                         </div>
                     </div>
 
@@ -605,7 +608,7 @@
                         <div class="contact-email">
                             <i class="ion-ios-email-outline"></i>
                             <h3>Email</h3>
-                            <p><a href="mailto:info@example.com">info@example.com</a></p>
+                            <p><a href="mailto:Alessandro.Perez@etec.sp.gov.br">Gibizera@comics.com</a></p>
                         </div>
                     </div>
 
